--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
     min-height: 400px;
 }
 .footer{
-    background-color:aquamarine;
+    background-color:#d4c2f1;
     margin: 0px auto;
     padding:20px 0px 20px 0px;
 }
@@ -24,5 +24,13 @@
 .address{
     font-size: 80%;
     margin: 0px;
-    color: #0f0f0f;
+    color:black;
+}
+body{
+    padding: 50px 0px 0px 0px;
+    z-index:0;
+    
+}
+.navbar-dark{
+    background-color:#512Da8;
 }
