--- a/css/styles.css
+++ b/css/styles.css
@@ -38,3 +38,9 @@ body{
     margin-left: 1rem;
     margin-top: 2rem;
 }
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
