--- a/css/styles.css
+++ b/css/styles.css
@@ -47,3 +47,15 @@ body{
 .modal-dialog{
     background-color: #ddd;
 }
+.carousel{
+    background:#512Da8;
+}
+.carousel-item{
+    height:300px;
+}
+.carousel-item img{
+    position:absolute;
+    top:0;
+    left:0;
+    min-height:300px;
+}
